--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -15,7 +15,7 @@
         <li
           class="list-group-item"
           *ngFor="let brand of brands"
-          [class.active]="brand.id === this.brandIdSelected"
+          [class.active]="brand.id === this.shopParams.brandId"
           [value]="brand.id"
           (click)="onBrandSelected(brand.id)"
         >
@@ -27,7 +27,7 @@
         <li
           class="list-group-item"
           *ngFor="let type of types"
-          [class.active]="type.id === this.typeIdSelected"
+          [class.active]="type.id === this.shopParams.typeId"
           [value]="type.id"
           (click)="onTypeSelected(type.id)"
         >
@@ -39,8 +39,24 @@
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
         <header>
-          <span
-            >Showing <strong>10</strong> of <strong>15</strong> results</span
+          <span *ngIf="this.totalCount && this.totalCount > 0">
+            Showing
+            <strong>
+              {{
+                (this.shopParams.pageNumber - 1) * this.shopParams.pageSize + 1
+              }}
+              -
+              {{
+                this.shopParams.pageNumber * this.shopParams.pageSize >
+                this.totalCount
+                  ? this.totalCount
+                  : this.shopParams.pageNumber * this.shopParams.pageSize
+              }}
+            </strong>
+            of <strong>{{ this.totalCount }}</strong> results</span
+          >
+          <span *ngIf="this.totalCount === 0"
+            ><strong>No</strong> products found.</span
           >
         </header>
         <div class="form-inline mt-2">
@@ -60,10 +76,12 @@
           <app-product-item [product]="item"></app-product-item>
         </div>
       </div>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center" *ngIf="this.totalCount > 0">
         <pagination
           [boundaryLinks]="true"
-          [totalItems]="77"
+          [totalItems]="this.totalCount"
+          (pageChanged)="onPageChanged($event)"
+          [itemsPerPage]="this.shopParams.pageSize"
           previousText="&lsaquo;"
           nextText="&rsaquo;"
           firstText="&laquo;"
