--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -38,27 +38,11 @@
 
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
-        <header>
-          <span *ngIf="this.totalCount && this.totalCount > 0">
-            Showing
-            <strong>
-              {{
-                (this.shopParams.pageNumber - 1) * this.shopParams.pageSize + 1
-              }}
-              -
-              {{
-                this.shopParams.pageNumber * this.shopParams.pageSize >
-                this.totalCount
-                  ? this.totalCount
-                  : this.shopParams.pageNumber * this.shopParams.pageSize
-              }}
-            </strong>
-            of <strong>{{ this.totalCount }}</strong> results</span
-          >
-          <span *ngIf="this.totalCount === 0"
-            ><strong>No</strong> products found.</span
-          >
-        </header>
+        <app-paging-header
+          [totalCount]="totalCount"
+          [pageSize]="this.shopParams.pageSize"
+          [pageNumber]="this.shopParams.pageNumber"
+        ></app-paging-header>
         <div class="form-inline mt-2">
           <input
             type="text"
