Move pagination to its own component

--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -61,17 +61,11 @@
         </div>
       </div>
       <div class="d-flex justify-content-center" *ngIf="this.totalCount > 0">
-        <pagination
-          [boundaryLinks]="true"
-          [totalItems]="this.totalCount"
+        <app-pager
+          [pageSize]="shopParams.pageSize"
+          [totalCount]="totalCount"
           (pageChanged)="onPageChanged($event)"
-          [itemsPerPage]="this.shopParams.pageSize"
-          previousText="&lsaquo;"
-          nextText="&rsaquo;"
-          firstText="&laquo;"
-          lastText="&raquo;"
-        >
-        </pagination>
+        ></app-pager>
       </div>
     </section>
   </div>
