--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -5,7 +5,7 @@
     class="img-fluid bg-info"
   />
   <div class="card-body d-flex flex-column">
-    <a href="#">
+    <a routerLink="/shop/{{ product.id }}">
       <h6 class="text-uppercase">{{ product.name }}</h6>
     </a>
     <span class="mb-2">{{ product.price | currency }}</span>
@@ -15,7 +15,11 @@
         type="button"
         class="btn btn-outline-secondary fa fa-shopping-cart mr-2"
       ></button>
-      <button type="button" class="btn btn-outline-secondary">
+      <button
+        type="button"
+        class="btn btn-outline-secondary"
+        routerLink="/shop/{{ product.id }}"
+      >
         View
       </button>
     </div>
