Add Toastr to display errors

--- a/client/src/app/core/test-error/test-error.component.html
+++ b/client/src/app/core/test-error/test-error.component.html
@@ -17,4 +17,9 @@
   >
     Test 400 Validation error
   </button>
+  <div class="row mt-5" *ngIf="validationErrors">
+    <ul class="text-danger">
+      <li *ngFor="let error of validationErrors">{{ error }}</li>
+    </ul>
+  </div>
 </div>
