--- a/client/src/app/core/server-error/server-error.component.html
+++ b/client/src/app/core/server-error/server-error.component.html
@@ -1,3 +1,24 @@
 <div class="container mt-5">
-  <h1>Internal Server Error</h1>
+  <h4>
+    Internal Server Error - refreshing the page will make the exception
+    disappear
+  </h4>
+  <ng-container *ngIf="error">
+    <h5 class="text-danger">Error: {{ error.message }}</h5>
+    <p class="font-weight-bold">
+      Note: if you are seeing this then Angular is probably not responsible
+    </p>
+    <p>What to do nbext?</p>
+    <ol>
+      <li>Open Chrome dev tools</li>
+      <li>Inspect network tab</li>
+      <li>Check the failing request</li>
+      <li>Examine request URL</li>
+      <li>Reproduce error in other tools</li>
+    </ol>
+    <p>Stack trace:</p>
+    <code class="mt-5" style="background-color: whitesmoke;">{{
+      error.details
+    }}</code>
+  </ng-container>
 </div>
