--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav-bar></app-nav-bar>
-<div class="container" style="margin-top: 140px;">
+<app-section-head></app-section-head>
+<div class="container">
   <router-outlet></router-outlet>
 </div>
