--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,6 +4,6 @@
 
 <app-nav-bar></app-nav-bar>
 <app-section-head></app-section-head>
-<div class="container">
+<div>
   <router-outlet></router-outlet>
 </div>
