--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,10 +1,10 @@
-<div class="container mt-5">
+<div class="container mt-3">
   <div class="row">
     <section class="col-3">
       <ng-container *ngIf="types && brands">
-        <h5 class="text-warning ml-3">Sort</h5>
+        <h5 class="text-warning ml-3 mt-4 mb-3">Sort</h5>
         <select
-          class="custom-select mb-3"
+          class="custom-select mb-4"
           (change)="onSortSelected($event.target.value)"
         >
           <option *ngFor="let sort of sortOptions" [value]="sort.value">{{
@@ -45,7 +45,7 @@
           [pageSize]="this.shopParams.pageSize"
           [pageNumber]="this.shopParams.pageNumber"
         ></app-paging-header>
-        <div class="form-inline mt-2" *ngIf="products">
+        <div class="form-inline" *ngIf="products">
           <input
             type="text"
             style="width: 300px;"
