--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -22,7 +22,9 @@
   <div class="d-flex align-items-center">
     <a class="position-relative" routerLink="/basket">
       <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-      <div class="cart-no">5</div>
+      <div class="cart-no" *ngIf="basket$ | async as basket">
+        {{ basket.items.length }}
+      </div>
     </a>
     <a class="btn btn-outline-secondary mr-2">Login</a>
     <a class="btn btn-outline-secondary mr-3">Sign up</a>
