--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -88,6 +88,16 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-6 offset-6">
+            <app-order-totals></app-order-totals>
+            <a
+              routerLink="/checkout"
+              class="btn btn-outline-primary py-2 btn-block"
+              >Check Out</a
+            >
+          </div>
+        </div>
       </div>
     </div>
   </div>
