give service methods for inc dec remove

--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -60,6 +60,7 @@
                         <i
                           class="fa fa-minus-circle text-warning mr-2"
                           style="cursor: pointer; font-size: 2em;"
+                          (click)="decrementItemQuantity(item)"
                         ></i>
                         <span
                           class="font-weight-bold"
@@ -69,6 +70,7 @@
                         <i
                           class="fa fa-plus-circle text-warning mx-2"
                           style="cursor: pointer; font-size: 2em;"
+                          (click)="incrementItemQuantity(item)"
                         ></i>
                       </div>
                     </td>
@@ -79,7 +81,11 @@
                     </td>
                     <td class="align-middle text-center">
                       <a class="text-danger">
-                        <i class="fa fa-trash" style="font-size: 2em;"></i>
+                        <i
+                          class="fa fa-trash"
+                          style="font-size: 2em; cursor: pointer;"
+                          (click)="removeBasketItem(item)"
+                        ></i>
                       </a>
                     </td>
                   </tr>
