--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -14,13 +14,20 @@
         <i
           class="fa fa-minus-circle text-warning mr-2"
           style="cursor: pointer; font-size: 2em;"
+          (click)="decrementQuantity()"
         ></i>
-        <span class="font-weight-bold" style="font-size: 1.5em;">2</span>
+        <span class="font-weight-bold" style="font-size: 1.5em;">
+          {{ quantity }}
+        </span>
         <i
           class="fa fa-plus-circle text-warning mx-2"
           style="cursor: pointer; font-size: 2em;"
+          (click)="incrementQuantity()"
         ></i>
-        <button class="btn btn-outline-secondary btn-lg ml-4">
+        <button
+          class="btn btn-outline-primary btn-lg ml-4"
+          (click)="addItemToBasket()"
+        >
           Add to cart
         </button>
       </div>
