Set up angual account routes and components

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -26,7 +26,11 @@
         {{ basket.items.length }}
       </div>
     </a>
-    <a class="btn btn-outline-secondary mr-2">Login</a>
-    <a class="btn btn-outline-secondary mr-3">Sign up</a>
+    <a class="btn btn-outline-secondary mr-2" routerLink="/account/login"
+      >Login</a
+    >
+    <a class="btn btn-outline-secondary mr-3" routerLink="/account/register"
+      >Sign up</a
+    >
   </div>
 </div>
