--- a/client/src/app/account/login/login.component.html
+++ b/client/src/app/account/login/login.component.html
@@ -5,57 +5,16 @@
         <h1 class="h3 mb-3 font-weight-normal">Login</h1>
       </div>
 
-      <div class="form-label-group">
-        <input
-          type="email"
-          id="inputEmail"
-          class="form-control"
-          placeholder="Email address"
-          formControlName="email"
-        />
-        <label for="inputEmail">Email address</label>
-        <span
-          class="text-danger"
-          *ngIf="
-            loginForm.get('email').touched &&
-            loginForm.get('email').invalid &&
-            loginForm.get('email').errors['required']
-          "
-        >
-          E-mail address is required
-        </span>
-        <span
-          class="text-danger"
-          *ngIf="
-            loginForm.get('email').touched &&
-            loginForm.get('email').invalid &&
-            loginForm.get('email').errors['pattern']
-          "
-        >
-          E-mail address is not valid
-        </span>
-      </div>
+      <app-text-input
+        formControlName="email"
+        [label]="'Email Address'"
+      ></app-text-input>
+      <app-text-input
+        formControlName="password"
+        [label]="'Password'"
+        [type]="'password'"
+      ></app-text-input>
 
-      <div class="form-label-group">
-        <input
-          type="password"
-          id="inputPassword"
-          class="form-control"
-          placeholder="Password"
-          formControlName="password"
-        />
-        <label for="inputPassword">Password</label>
-        <span
-          class="text-danger"
-          *ngIf="
-            loginForm.get('password').touched &&
-            loginForm.get('password').invalid &&
-            loginForm.get('password').errors['required']
-          "
-        >
-          Password is required
-        </span>
-      </div>
       <button
         class="btn btn-lg btn-primary btn-block"
         type="submit"
@@ -64,13 +23,5 @@
         Sign in
       </button>
     </form>
-  </div>
-
-  <div class="col-4">
-    <p>Form Status: {{ loginForm.status }}</p>
-    <p>Email Status: {{ loginForm.get("email").status }}</p>
-    <p>Email Touched: {{ loginForm.get("email").touched }}</p>
-    <p>Email Dirty: {{ loginForm.get("email").dirty }}</p>
-    <pre>{{ loginForm.value | json }}</pre>
   </div>
 </div>
