--- a/client/src/app/shared/components/text-input/text-input.component.html
+++ b/client/src/app/shared/components/text-input/text-input.component.html
@@ -15,6 +15,14 @@
     class="form-control"
     placeholder="{{ label }}"
   />
+  <div
+    *ngIf="
+      controlDir &&
+      controlDir.control &&
+      controlDir.control.status === 'PENDING'
+    "
+    class="fa fa-spinner fa-spin loader"
+  ></div>
   <label for="{{ label }}">{{ label }}</label>
   <div
     class="invalid-feedback"
@@ -30,6 +38,19 @@
     >
     <span *ngIf="controlDir.control.errors?.pattern"
       >{{ label }} is invalid</span
+    >
+  </div>
+  <div
+    class="invalid-feedback d-block"
+    *ngIf="
+      controlDir &&
+      controlDir.control &&
+      !controlDir.control.valid &&
+      controlDir.control.dirty
+    "
+  >
+    <span *ngIf="controlDir.control.errors?.emailExists"
+      >Email addres is in use</span
     >
   </div>
 </div>
