restyle and use

--- a/client/src/app/shared/components/basket-summary/basket-summary.component.html
+++ b/client/src/app/shared/components/basket-summary/basket-summary.component.html
@@ -2,19 +2,19 @@
   <table class="table">
     <thead>
       <tr>
-        <th class="border-0 bg-light" scope="col">
+        <th class="border-0" [class.bg-light]="showControls" scope="col">
           <div class="p-2 px-3 text-uppercase">Product</div>
         </th>
-        <th scope="col" class="border-0 bg-light">
+        <th scope="col" class="border-0" [class.bg-light]="showControls">
           <div class="py-2 text-uppercase">Price</div>
         </th>
-        <th scope="col" class="border-0 bg-light">
+        <th scope="col" class="border-0" [class.bg-light]="showControls">
           <div class="py-2 text-uppercase">Quantity</div>
         </th>
-        <th scope="col" class="border-0 bg-light">
+        <th scope="col" class="border-0" [class.bg-light]="showControls">
           <div class="py-2 text-uppercase">Total</div>
         </th>
-        <th scope="col" class="border-0 bg-light">
+        <th *ngIf="showControls" scope="col" class="border-0 bg-light">
           <div class="py-2 text-uppercase">Remove</div>
         </th>
       </tr>
@@ -43,8 +43,12 @@
           <strong>{{ item.price | currency }}</strong>
         </td>
         <td class="align-middle">
-          <div class="d-flex align-items-center">
+          <div
+            class="d-flex align-items-center"
+            [class.justify-content-center]="!showControls"
+          >
             <i
+              *ngIf="showControls"
               class="fa fa-minus-circle text-warning mr-2"
               style="cursor: pointer; font-size: 2em;"
               (click)="decrementItemQuantity(item)"
@@ -53,6 +57,7 @@
               item.quantity
             }}</span>
             <i
+              *ngIf="showControls"
               class="fa fa-plus-circle text-warning mx-2"
               style="cursor: pointer; font-size: 2em;"
               (click)="incrementItemQuantity(item)"
@@ -62,9 +67,10 @@
         <td class="align-middle">
           <strong>{{ item.price * item.quantity | currency }}</strong>
         </td>
-        <td class="align-middle text-center">
+        <td class="align-middle text-center" *ngIf="showControls">
           <a class="text-danger">
             <i
+              *ngIf="showControls"
               class="fa fa-trash"
               style="font-size: 2em; cursor: pointer;"
               (click)="removeBasketItem(item)"
