--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -2,12 +2,18 @@
   <div class="row">
     <div class="col-8">
       <app-stepper [linearModeSelected]="false" #appStepper>
-        <cdk-step [label]="'Address'">
+        <cdk-step
+          [label]="'Address'"
+          [completed]="checkoutForm.get('addressForm').valid"
+        >
           <app-checkout-address
             [checkoutForm]="checkoutForm"
           ></app-checkout-address>
         </cdk-step>
-        <cdk-step [label]="'Delivery'">
+        <cdk-step
+          [label]="'Delivery'"
+          [completed]="checkoutForm.get('deliveryForm').valid"
+        >
           <app-checkout-delivery
             [checkoutForm]="checkoutForm"
           ></app-checkout-delivery>
