--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -1,5 +1,6 @@
 <div class="mt-4" [formGroup]="checkoutForm">
-  <div class="row" formGroupName="deliveryForm">
+  <h4 class="mb-3">Choose your delivery method</h4>
+  <div class="row ml-5" formGroupName="deliveryForm">
     <div class="col-6 form-group" *ngFor="let method of deliveryMethods">
       <input
         type="radio"
@@ -7,6 +8,7 @@
         value="{{ method.id }}"
         formControlName="deliveryMethod"
         class="custom-control-input"
+        (click)="setShippingPrice(method)"
       />
       <label for="{{ method.id }}" class="custom-control-label">
         <strong>{{ method.shortName }} - {{ method.price | currency }}</strong>
