Show list of orders and order detail pages

--- a/client/src/app/checkout/checkout-success/checkout-success.component.html
+++ b/client/src/app/checkout/checkout-success/checkout-success.component.html
@@ -2,5 +2,14 @@
   <div><i class="fa fa-check-circle fa-5x" style="color: green;"></i></div>
   <h2>Thank you! Your order is confirmed!</h2>
   <p class="mb-4">This isnt a real store ya know....</p>
-  <button class="btn btn-outline-success">View your order</button>
+  <button
+    class="btn btn-outline-success"
+    *ngIf="order"
+    routerLink="/orders/{{ order?.id }}"
+  >
+    View your order
+  </button>
+  <button class="btn btn-outline-success" *ngIf="!order" routerLink="/orders">
+    View your orders
+  </button>
 </div>
