--- a/client/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/client/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -8,6 +8,9 @@
     </div>
     <div class="form-group col-6">
       <div class="form-control py-3" #cardNumber></div>
+      <ng-container *ngIf="cardErrors">
+        <span class="text-danger">{{ cardErrors }}</span>
+      </ng-container>
     </div>
     <div class="form-group col-3">
       <div class="form-control py-3" #cardExpiry></div>
