--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -7,9 +7,12 @@
           class="custom-select mb-4"
           (change)="onSortSelected($event.target.value)"
         >
-          <option *ngFor="let sort of sortOptions" [value]="sort.value">{{
-            sort.name
-          }}</option>
+          <option
+            *ngFor="let sort of sortOptions"
+            [value]="sort.value"
+            [selected]="shopParams.sort === sort.value"
+            >{{ sort.name }}</option
+          >
         </select>
         <h5 class="text-warning ml-3">Brands</h5>
         <ul class="list-group my-3">
@@ -72,6 +75,7 @@
         <app-pager
           [pageSize]="shopParams.pageSize"
           [totalCount]="totalCount"
+          [pageNumber]="shopParams.pageNumber"
           (pageChanged)="onPageChanged($event)"
         ></app-pager>
       </div>
